--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.6.2",
     "body-parser": "^1.20.2",
     "child_process": "^1.0.2",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "kafkajs": "^2.2.4",
     "pg": "^8.11.3",
